# visualization.nastyfft

./: CMakeLists.txt
src/: nastyfft.cpp  nastyfft.h  plugin.cpp
visualization.nastyfft/: addon.xml  addon.xml.in
visualization.nastyfft/resources/: settings.xml
visualization.nastyfft/resources/language/English/: strings.po
